--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,10 @@
-bokeh==2.3.0
-cachetools==4.2.1
-certifi==2020.12.5
-chardet==4.0.0
 click==7.1.2
-cssselect==1.1.0
-cssutils==2.2.0
-DateTime==4.3
-emails==0.6
 Flask==1.1.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.0.0
-gunicorn==20.0.4
-idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
-lxml==4.6.3
 MarkupSafe==1.1.1
-numpy==1.20.2
-packaging==20.9
-pandas==1.2.3
-pandas-datareader==0.9.0
-Pillow==8.1.2
-premailer==3.7.0
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.25.1
-six==1.15.0
-SQLAlchemy==1.4.4
-tornado==6.1
-typing-extensions==3.7.4.3
-urllib3==1.26.4
+psycopg2==2.8.6
+SQLAlchemy==1.4.6
 Werkzeug==1.0.1
-zope.interface==5.3.0
